--- a/PropertyManagementApp/MainWindow.xaml
+++ b/PropertyManagementApp/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PropertyManagementApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="170" Width="500">
+        Title="Login Window" Height="170" Width="500">
     <Grid>
 
         <Grid.ColumnDefinitions>
