CRUD >> implement Delete button (remove)

--- a/PropertyManagementApp/PropertyManagement.xaml
+++ b/PropertyManagementApp/PropertyManagement.xaml
@@ -59,7 +59,7 @@
                     <TextBox x:Name="txtPrice" Grid.Column="2" Grid.Row="7" Margin="0,2,0,0" FontSize="11" BorderBrush="Gray"/>
 
                     <Button x:Name="btnAdd" Content="_Add" Grid.Column="1" Grid.Row="11"  Margin="0,6,0,-22" Click="btnAdd_Click"  />
-                    <Button x:Name="btnDelete" Content="_Delete" Grid.Column="2" Grid.Row="11" Grid.ColumnSpan="1" Margin="23,6,2,-22"  />
+                    <Button x:Name="btnDelete" Content="_Delete" Grid.Column="2" Grid.Row="11" Grid.ColumnSpan="1" Margin="23,6,2,-22" Click="btnDelete_Click"  />
                     <Button x:Name="btnChange" Content="_Change" Grid.Column="3" Grid.Row="11" Grid.ColumnSpan="1" Margin="20,6,88,-22"  />
 
                     <GroupBox Header="Status" Grid.Column="3" Grid.Row="3" Grid.RowSpan="4" Margin="10,0,50,0">
